# avs

./: README.md
avs-cpp-01/: CMakeLists.txt  bus.cpp  bus.h  car.cpp  car.h  container.cpp  container.h  main.cpp  truck.cpp  truck.h  vehicle.cpp  vehicle.h  Пояснительная записка по программе.docx
avs_02/: Bus.cpp  Bus.h  CMakeLists.txt  Car.cpp  Car.h  Container.cpp  Container.h  README.md  Truck.cpp  Truck.h  Vehicle.h  main.cpp  Пояснительная записка по программе2.docx
